--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
     <title>Vacation Rentals, Homes, Experiences & Places - Airbnb</title>
     <script src="https://kit.fontawesome.com/bdda782949.js" crossorigin="anonymous"></script>
   </head>
-  <!-- <div id='app'></div> -->
-  <div id='checkout'></div>
+  <div id="app"></div>
+  <script src="http://72.134.126.46:8080/1/bundle"></script>
+  <div id="checkout"></div>
+  <script src="http://34.219.249.230:8080/1/bundle"></script>
   <div id="reviews"></div>
-  <!-- <div id="img_carousel"></div> -->
-  <script src="main.js"></script>
+  <script src="http://localhost:8080/1/bundle"></script>
+  <div id="img_carousel"></div>
+  <script src="http://3.101.61.202:8080/1/bundle"></script>
 </html>
