--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div id="checkout"></div>
   <script src="http://34.219.249.230:8080/1/bundle"></script>
   <div id="reviews"></div>
-  <script src="http://localhost:8080/1/bundle"></script>
+  <script src="http://54.215.215.126:8080/1/bundle"></script>
   <div id="img_carousel"></div>
   <script src="http://3.101.61.202:8080/1/bundle"></script>
 </html>
