--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="Airbnb.ico">
-    <title>Vacation Rentals, Homes, Experiences & Places - Airbnb</title>
-    <script src="https://kit.fontawesome.com/bdda782949.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="The-Casuals.ico">
+    <title>The-Casuals</title>
   </head>
-  <div id="app"></div>
-  <script src="http://13.52.246.93:8080/1/bundle"></script>
-  <div id="checkout"></div>
-  <script src="http://34.219.249.230:8080/1/bundle"></script>
-  <div id="reviews"></div>
-  <script src="http://54.215.215.126:8080/1/bundle"></script>
-  <div id="img_carousel"></div>
-  <script src="http://3.101.61.202:8080/1/bundle"></script>
+<style>
+  body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 48px 80px;
+  }
+  @media (max-width: 1128px) {
+    body { margin: 48px 40px; }
+  }
+  @media (max-width: 730px) {
+    body { margin: 32px 24px; }
+  }
+  .photo {
+    background-image: url('https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.jpg');
+    height: 90vh;
+    width: 90vh;
+    cursor: pointer;
+  }
+</style>
+  <body>
+    <a class="photo" href="main.html" title="photo" id="photo"></a>
+  </body>
 </html>
