--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,26 @@
     <title>The-Casuals</title>
   </head>
 <style>
+  * {
+    margin: 0;
+    padding: 0;
+  }
   body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 48px 80px;
-  }
-  @media (max-width: 1128px) {
-    body { margin: 48px 40px; }
-  }
-  @media (max-width: 730px) {
-    body { margin: 32px 24px; }
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   }
   .photo {
     background-image: url('https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.jpg');
-    height: 90vh;
-    width: 90vh;
+    height: 100vh;
+    width: 100vh;
     cursor: pointer;
   }
 </style>
   <body>
-    <a class="photo" href="main.html" title="photo" id="photo"></a>
+    <a class="photo" href="/1"></a>
   </body>
 </html>
