--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,6 @@
   }
 </style>
   <body>
-    <a class="photo" href="/1"></a>
+    <a class="photo" href="http://54.215.215.126/1"></a>
   </body>
 </html>
