--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,17 @@
 <style>
   * {
     margin: 0;
-    padding: 0;
   }
-  body {
+  main {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100vw;
-  overflow: hidden;
   }
 </style>
-  <body>
+  <main>
     <a href="/1/main">
-      <img src="https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.png" />
+      <img height="100%" width="100%" src="https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.webp" alt="The-Casuals Logo" />
     </a>
-  </body>
+  </main>
 </html>
