--- a/public/main.html
+++ b/public/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="Airbnb.ico">
-    <title>Vacation Rentals, Homes, Experiences & Places - Airbnb</title>
+    <title>HouseHub</title>
   </head>
   <div id="app"></div>
   <script src="http://13.52.246.93:8080/1/bundle"></script>
