--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <title>The-Casuals</title>
     <link rel="icon" href="The-Casuals.ico">
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Casuals Splash Page">
+    <meta name="keywords" content="The Casuals Coders">
+    <meta name="author" content="The-Casuals">
+    <meta name="theme-color" content="#ffffff">
   </head>
 <style>
   * {
