--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>The-Casuals</title>
-    <link rel="icon" href="The-Casuals.ico">
+    <link rel="icon" href="https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Casuals Splash Page">
@@ -23,7 +23,12 @@
 </style>
   <main>
     <a href="/1/main">
-      <img height="100%" width="100%" src="https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.webp" alt="The-Casuals Logo" />
+      <img
+        height="100%"
+        width="100%"
+        src="https://airbnbfec.s3-us-west-1.amazonaws.com/The-Casuals.webp"
+        alt="The-Casuals Logo"
+      />
     </a>
   </main>
 </html>
