Setup for https.

--- a/public/main.html
+++ b/public/main.html
@@ -11,11 +11,15 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <div id="app"></div>
-  <script src="http://13.52.246.93:8080/1/bundle"></script>
+  <script src="https://airbnbfec.s3-us-west-1.amazonaws.com/gallery.js"></script>
+  <!-- <script src="http://13.52.246.93:8080/1/bundle"></script> -->
   <div id="checkout"></div>
-  <script src="http://34.219.249.230:8080/1/bundle"></script>
+  <script src="https://airbnbfec.s3-us-west-1.amazonaws.com/checkout.js"></script>
+  <!-- <script src="http://34.219.249.230:8080/1/bundle"></script> -->
   <div id="reviews"></div>
-  <script src="http://54.215.215.126:8080/1/bundle"></script>
+  <script src="https://airbnbfec.s3-us-west-1.amazonaws.com/reviews.js"></script>
+  <!-- <script src="http://54.215.215.126:8080/1/bundle"></script> -->
   <div id="img_carousel"></div>
-  <script src="http://13.56.115.246:8080/1/bundle"></script>
+  <script src="https://airbnbfec.s3-us-west-1.amazonaws.com/carousel.js"></script>
+  <!-- <script src="http://13.56.115.246:8080/1/bundle"></script> -->
 </html>
